--- a/css/responsive.css
+++ b/css/responsive.css
@@ -61,13 +61,19 @@
 	}
 	.carousel-caption p {
 	    font-size: 30px;
-	    line-height: 45px;
+	    line-height: 30px;
 	}
+	.carousel-caption img{
+     height: auto;
+	width: 80px;
+	padding:0px;
+	}
+
 	.overlay-slide {
     	height: 100%;
 	}
 	.carousel-indicators {
-    	bottom: 15%;
+    	bottom: 1%;
 	}
 	.carousel-control.right {
     	right: 32px;
@@ -172,7 +178,7 @@
 	/*main Slider*/
 	#slider_part {
     	height: 210px;
-    	margin-top: 25px;
+    	margin-top: 40px;
 	}
 	.carousel-caption {
     	top: 20%;
@@ -180,11 +186,18 @@
 	.overlay-slide {
     	height: 100%;
 	}
+
 	.carousel-caption p {
 	    font-size: 12px;
 	    line-height: 14px;
 	    margin-top: 15px;
 	}
+	.carousel-caption img{
+     height: auto;
+	width: 40px;
+	padding: 0px;
+	}
+	
 	.carousel-indicators li {
 	    width: 15px !important;
 	    height: 15px !important;
@@ -194,7 +207,7 @@
 	}
 	.carousel-indicators {
 	    left: 37%;
-	    bottom: 19%;
+	    bottom: 6%;
 	}
 	
 	.slides-control .carousel-control i {
